# Catalyst-DATA-ANALYSIS

./: .gitignore  Alex-Bootstrap-Learning.code-workspace  DBA710_ANOVA_Discussion_Post.md  DBA710_Module4_Case_Assignment.md  DBA710_Multiple_Regression_Analysis_Report.md  DBA_710_Correlation_Analysis.md  DOCUMENTATION_UPDATE_SUMMARY.md  INSTALLATION-GUIDE.md  INTERACTIVE-SPSS-ANALYSIS-GUIDE.md  MANUAL-DATA-ANALYSIS.md  README.md  REQUIREMENTS-GUIDE.md  REQUIREMENTS-INSTALLATION-GUIDE.md  SETUP-DATA-ANALYSIS.md  SETUP-DREAM-MEDITATE.md  SPSS-INTEGRATION.md  T-Test_Forum_Post.md  install_core.ps1  install_core.sh  pyproject.toml  requirements-SPSS.txt  requirements-advanced.txt  requirements-analysis.txt  requirements-dev.txt  requirements.txt  validate_requirements.py  verify_environment.py
.github/: copilot-instructions.md
catalyst-graphs/: catalyst-overview-20250724-110822.md  catalyst-overview-20250724-114800.md  catalyst-overview-20250724-205735.md  catalyst-overview-20250724-212553.md  catalyst-overview-20250727-164124.md  catalyst-overview-20250727-174428.md  catalyst-overview-20250727-183200.md  catalyst-overview-20250727-185046.md  catalyst-overview-20250729-173857.md
data/: sample_survey.csv  sample_survey.xlsx
docs/: README.md  api-reference.md  architecture.md  configuration.md  developer-guide.md  installation.md  troubleshooting.md  user-guide.md
domain-knowledge/: CUSTOMER-SATISFACTION-METHODOLOGIES.md  DK-TEMPLATE.md  SCALE-DEVELOPMENT-VALIDATION.md  SPSS-IMPLEMENTATION-GUIDE.md  SPSS-PYTHON-EQUIVALENTS.md  STRUCTURAL-EQUATION-MODELING.md
(+161 files in other folders)
